# backend

./: .env.example  Dockerfile  docker-compose.yml  pyproject.toml
alembic/: env.py
app/api/: __init__.py  deps.py
app/core/: __init__.py  config.py  db.py
docs/: FastAPI_Architecture.md  psycopg_vs_asyncpg.md
src/api/: __init__.py  deps.py
src/core/: __init__.py  db.py
