[project]
name = "backend"
version = "0.1.0"
description = "The legend backend server of WapSudal"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.122.0",
    "psycopg[binary]>=3.2.13",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.6.0",
    "sqlmodel>=0.0.27",
    "alembic>=1.14.0",
]
